<resources>
    <string name="user">Username</string>
    <string name="pswd">Kata Sandi</string>
    <string name="sign_in">Masuk</string>
    <string name="info_register">Anda ingin mendaftar ?</string>
    <string name="sign_up">Daftar</string>

    <string name="info">Silahkan Masukkan Username dan Password Anda</string>
    <string name="username">Username</string>
    <string name="pass">Kata Sandi</string>
    <string name="pass_confirm">Konfirmasi Kata Sandi</string>

    <string name="btn_next">Selanjutnya</string>

    <string name="info2">Silahkan Masukkan Identitas Anda</string>
    <string name="nama">Nama</string>
    <string name="address_person">Alamat</string>
    <string name="number_telephone">Nomor Telepon</string>
    <string name="number_SIM">Nomor SIM B1/B2</string>

    <string name="info3">Hampir Selesai! Masukan Identitas Perusahaan Anda</string>
    <string name="kind_company">Jenis Perusahaan</string>
    <string name="name_company">Nama Perusahaan</string>
    <string name="address_company">Alamat Perusahaan</string>
    <string name="phone_company">Nomor Telepon</string>
    <string name="number_akte">Nomor Akte</string>
    <string name="number_SIUP">Nomor SIUP</string>
    <string name="number_TDP">Nomor TDP</string>
    <string name="number_NPWP">Nomor NPWP</string>

    <string name="info4">Anda Sudah Terdaftar Dalam Transport Apps! Fitur Transport Apps Telah Terserdia Untuk Anda</string>
    <string name="begin">Mulai</string>

    <string name="home">Beranda</string>
    <string name="order">Order Aktif</string>
    <string name="date">Tanggal Order :</string>
    <string name="time">Jam Order :</string>
    <string name="location">Lokasi Penjemputan :</string>
    <string name="vision">Tujuan :</string>
    <string name="status">Status Order :</string>
    <string name="detail">View Detail</string>
    <string name="history">Order History</string>
    <string name="order_date">Order date :</string>
    <string name="order_date1">Order date :</string>
    <string name="status_history">Status :</string>
    <string name="status_history1">Status :</string>
    <string name="view_more">View More</string>

    <string name="profile">Profile</string>
    <string name="region_profile">Wilayah</string>
    <string name="gender_profile">Jenis Kelamin</string>
    <string name="email_profile">Email</string>
    <string name="phone_profile">No. Handphone</string>
    <string name="dob_profile">Tanggal Lahir</string>
    <string name="address_profile">Alamat</string>
    <string name="name_company_profile">Nama Perusahaan</string>
    <string name="edit_profile">Perbaharui</string>

    <string name="notification">Notifikasi</string>
    <string name="Order_enter">Order Masuk</string>
    <string name="date_enter">Tanggal Order :</string>
    <string name="time_enter">Jam Order :</string>
    <string name="location_enter">Lokasi Penjemputan :</string>
    <string name="visi_enter">\"Tujuan :</string>
    <string name="status_enter">Status Order :</string>
    <string name="accept_enter">Accept Order</string>
    <string name="reject_enter">Reject Order</string>


    <string name="Opsi">Opsi</string>
    <string name="notification_Data">Notification Data</string>
    <string name="data_notif">Notification data currently</string>
    <string name="sign_out">Sign Out My Account</string>
    <string name="sign_out_data">SIGN OUT</string>

    <string name="detailorder">Detail Order Aktif</string>
    <string name="arrived_confirm">Arrived Confirm</string>
    <string name="date_confirm">Tanggal Order :</string>
    <string name="time_confirm">Jam Order :</string>
    <string name="location_confirm">Lokasi Penjemputan :</string>
    <string name="visi_confirm">Tujuan :</string>
    <string name="status_confirm">Status Order :</string>

    <string name="information">Informasi</string>
    <string name="title2">About as Application</string>
    <string name="btn_back">Back</string>

    <string name="Username_profile">Username</string>
    <string name="User_password">Password</string>

    <string name="company">Jenis Perusahaan</string>
    <style name="kind_company">Pilih Jenis Perusahaan</style>

    <string-array name="list_kind_company">
        <item>Perorangan</item>
        <item>Perusahaan</item>
    </string-array>

    <string name="enter_activation_code">Kami telah mengirimkan kode aktivasi ke email anda! \n \n Masukkan kode aktivasi anda disini: </string>
    <string name="activation_code_hint">Kode Aktivasi</string>
    <string name="activate_my_account_btn">Aktifkan akun saya</string>

    <string name="tos">Ketentuan Layanan</string>
    <string name="tos_label">Saya telah membaca dan setuju pada</string>
    <string name="tos_label_2">Ketentuan Layanan</string>
    <string name="close_btn">Tutup</string>

    <string name="finished_registration_text">Dengan menyelesaikan proses pendaftaran, anda bersedia untuk patuh terhadap Ketentuan Layanan Kami dan hasil pelanggaran apapun terhadap Ketentuan Layanan akan menyebabkan akun anda dihapus dari sistem</string>
    <string name="upload_file">Upload File</string>
    <string name="kotamadya">Kotamadya</string>
    <string name="email_address">Alamat Surei (Email)</string>
    <string name="firstName">Nama Depan</string>
    <string name="lastName">Nama Belakang</string>
    <string name="date_of_birth">Tanggal Lahir (dd/mm/yyyy)</string>
    <string name="resend_activation_code_to_email">Kirim Ulang Kode Aktivasi Ke Email</string>
    <string name="gender">Jenis Kelamin</string>
    <string name="address_company_profile">Alamat Perusahaan</string>
    <string name="SIM_profile">No. SIM</string>
    <string name="upload_image">Perbaharui Gambar Pengguna</string>
    <string name="edit">Edit Profile</string>
    <string name="region_hint">Wilayah</string>
    <string name="first_name_hint">Nama Depan</string>
    <string name="last_name_hint">Nama Belakang</string>
    <string name="date_of_birth_hint">Tanggal Lahir</string>
    <string name="address_hint">Alamat</string>
    <string name="SIM_hint">No. SIM</string>
    <string name="Account">Akun</string>
    <string name="email_address_hint">Email</string>
    <string name="phone_number_hint">No. Handphone</string>
    <string name="save">Simpan</string>
</resources>
