<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:layout_gravity="top|center"
            android:padding="5dp"
            android:background="@drawable/rectangle">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="top"
                android:layout_marginTop="3dp"
                android:background="@drawable/rectangle">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/order"
                    android:textSize="20sp"
                    android:gravity="top|center"
                    android:padding="5dp"
                    android:background="@android:color/background_light"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:id="@+id/date"
                    android:paddingLeft="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="10sp"
                    android:paddingTop="5dp"
                    android:id="@+id/time"
                    android:paddingLeft="30dp"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:id="@+id/location"
                    android:paddingLeft="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/vision"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:id="@+id/goals"
                    android:paddingLeft="30dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status"
                    android:textSize="15sp"
                    android:paddingTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:id="@+id/status"
                    android:paddingLeft="30dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/detail"
                    android:padding="20dp"
                    android:layout_marginBottom="50dp"
                    android:hint="@string/detail"
                    android:background="#17ed70"
                    android:layout_marginLeft="30dp"
                    android:layout_marginRight="30dp"
                    android:textColorHint="@android:color/white"
                    android:textSize="15sp" />

                </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_centerInParent="true">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="370dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/history"
                android:gravity="center"
                android:textSize="20sp"
                android:background="@android:color/background_light"
                android:padding="20dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="30dp"
            android:background="@android:color/transparent">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/order_date"
                android:paddingLeft="30dp"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_history1"
                android:paddingLeft="30dp"
                android:textSize="15sp"/>

        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="30dp"
                android:background="@android:color/transparent">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/order_date1"
                    android:paddingLeft="30dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/status_history1"
                    android:textSize="15sp"
                    android:layout_marginBottom="50dp"
                    android:paddingLeft="30dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="20dp"
                    android:hint="@string/view_more"
                    android:layout_marginRight="30dp"
                    android:layout_marginLeft="30dp"
                    android:layout_marginBottom="20dp"
                    android:textColorHint="#FFFFFF"
                    android:background="#17ed70"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>