<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_notification">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_parent"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" >

        <TextView
            android:id="@+id/toolbar1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/detailorder"
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="60dp"
        android:layout_gravity="top|center"
        android:padding="16dp"
        android:background="@drawable/rectangle">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/date_confirm"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:id="@+id/date"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/time_confirm"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:id="@+id/time"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_confirm"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:id="@+id/lokasi"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/visi_confirm"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:id="@+id/tujuan"
                android:paddingLeft="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/status_confirm"
                android:textSize="15sp"
                android:paddingTop="5dp"
                android:id="@+id/status"
                android:layout_marginBottom="40dp"
                android:paddingLeft="20dp"/>

            </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="5dp"
        android:layout_centerVertical="true"
        android:orientation="horizontal">

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/accept"
        android:padding="20dp"
        android:layout_marginTop="250dp"
        android:hint="@string/arrived_confirm"
        android:background="#17ed70"
        android:textColorHint="@android:color/white"
        android:textSize="15sp" />
    </LinearLayout>
</FrameLayout>