<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_account_activation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context="com.grinasia.transport.AccountActivationActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/enter_activation_code"
        android:textSize="20sp"
        android:textColor="@android:color/white"
        android:textAlignment="center"/>

    <EditText
        android:id="@+id/txtActivationCode"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:hint="@string/activation_code_hint"
        android:textColorHint="@android:color/white"
        android:textColor="@android:color/white"
        android:maxLines="1"
        android:maxLength="4"
        android:inputType="numberSigned"/>

    <TextView
        android:id="@+id/resendActivationCodeToEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:text="@string/resend_activation_code_to_email"
        android:textColor="@android:color/holo_blue_light"
        android:textAlignment="center"/>


    <Button
        android:id="@+id/btnActivateAccount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/activate_my_account_btn"
        android:background="@android:color/holo_blue_bright"/>

</LinearLayout>
