<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grinasia.transport.Fragments.ConfirmTOSFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/finished_registration_text"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chckAgreeTOS"
                android:layout_width="30dp"
                android:layout_height="wrap_content"/>

            <TextView
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/tos_label"
                android:textSize="13sp"
                android:textColor="@android:color/white"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/txtTOS"
                android:layout_width="160dp"
                android:layout_height="wrap_content"
                android:text="@string/tos_label_2"
                android:textSize="13sp"
                android:textColor="@android:color/holo_blue_light"/>
        </LinearLayout>

    </LinearLayout>

</FrameLayout>
