<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app ="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_register"
    android:fitsSystemWindows="true"
    tools:context="com.grinasia.transport.User.Register">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:text="@string/info"
                android:textAlignment="center"
                android:layout_margin="20dp"
                android:textSize="25sp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLayoutRegion_profile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/kotamadya"
                    android:maxLines="1"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:inputType="text"
                    android:id="@+id/txtRegion_profile"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLayoutEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:inputType="textEmailAddress"
                    android:id="@+id/txtEmailAddress_register"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLayoutUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:maxLines="1"
                    android:maxLength="45"
                    android:singleLine="true"
                    android:id="@+id/txtUsername"
                    android:textColor="@android:color/white" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLayoutPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass"
                    android:maxLines="1"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:inputType="textPassword"
                    android:id="@+id/txtPassword"
                    android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/txtLayoutConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:textColorHint="@android:color/white"
                app:hintTextAppearance="@style/TextAppearance.AppCompat.Medium.Inverse">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pass_confirm"
                    android:maxLines="1"
                    android:maxLength="255"
                    android:singleLine="true"
                    android:id="@+id/txtConfirmPassword"
                    android:inputType="textPassword"
                    android:textColor="@android:color/white"/>

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>